--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,8 +17,9 @@
         {{ end }}
       </div>
       <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
-        {{ with .Site.Params.copyright }}<small class="text-white">&copy; {{ now.Year}} {{ .}} {{ T "footer_all_rights_reserved" }}</small>{{ end }}
-        {{ with .Site.Params.privacy_policy }}<small class="ml-1"><a href="{{ . }}" target="_blank">{{ T "footer_privacy_policy" }}</a></small>{{ end }}
+        {{ with .Site.Params.copyright_website }}<small class="text-white">&copy; {{ now.Year}} {{ .}} {{ T "footer_copyright_website" | safeHTML}}</small>{{ end }}
+        </br>
+        <small class="text-white">{{ T "footer_theme_notice"}}</small>
 	{{ if not .Site.Params.ui.footer_about_disable }}
 		{{ with .Site.GetPage "about" }}<p class="mt-2"><a href="{{ .RelPermalink }}">{{ .Title }}</a></p>{{ end }}
 	{{ end }}
