--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -11,7 +11,7 @@
         let theme = getTheme === 'dark' ? 'github-dark' : 'github-light';
         let s = document.createElement('script');
         s.src = 'https://utteranc.es/client.js';
-        s.setAttribute('repo', 'junghoon-vans/blog');
+        s.setAttribute('repo', 'junghoon-vans/vanslog');
         s.setAttribute('issue-term', 'pathname');
         s.setAttribute('theme', theme);
         s.setAttribute('crossorigin', 'anonymous');
