refactor: Update utterances logic

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,38 +1,41 @@
 {{- /* Comments area start */ -}}
 <div class="comments">
     <script>
-        var getTheme = window.localStorage && window.localStorage.getItem("pref-theme");
-        if (getTheme == null) {
-            getTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        loadComment();
+        const callback = (mutationsList) => {
+            mutationsList.forEach(mutation => {
+                if (mutation.attributeName === "class" && document.querySelector('.utterances-frame')) {
+                    const message = {
+                    type: 'set-theme',
+                    theme: getTheme()
+                };
+                const iframe = document.querySelector('.utterances-frame');
+                iframe.contentWindow.postMessage(message, 'https://utteranc.es');
+                }
+            })
         }
-        
-        let theme = getTheme === 'dark' ? 'github-dark' : 'github-light';
-        let s = document.createElement('script');
-        s.src = 'https://utteranc.es/client.js';
-        s.setAttribute('repo', 'junghoon-vans/vanslog');
-        s.setAttribute('issue-term', 'pathname');
-        s.setAttribute('theme', theme);
-        s.setAttribute('crossorigin', 'anonymous');
-        s.setAttribute('async', '');
-        document.querySelector('div.comments').innerHTML = '';
-        document.querySelector('div.comments').appendChild(s);
-
-        const mutationObserver = new MutationObserver((mutationsList, observer) => {
-        mutationsList.forEach(mutation => {
-                if (mutation.attributeName === "class") {
-                if (document.querySelector('.utterances-frame')) {
-                        const theme = mutation.target.classList.contains("dark") ? 'github-dark' : 'github-light'
-                        const message = {
-                        type: 'set-theme',
-                        theme: theme
-                        };
-                        const iframe = document.querySelector('.utterances-frame');
-                        iframe.contentWindow.postMessage(message, 'https://utteranc.es');
-                }
-                }
-        })
-        });
+        const mutationObserver = new MutationObserver(callback);
         mutationObserver.observe(document.body, { attributes: true });
+
+        function getTheme() {
+            var theme = window.localStorage && window.localStorage.getItem("pref-theme");
+            if (theme == null) {
+                theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+            }
+            return theme === 'dark' ? 'github-dark' : 'github-light';
+        }
+
+        function loadComment() {
+            let s = document.createElement('script');
+            s.src = 'https://utteranc.es/client.js';
+            s.setAttribute('repo', 'junghoon-vans/vanslog');
+            s.setAttribute('issue-term', 'pathname');
+            s.setAttribute('theme', getTheme());
+            s.setAttribute('crossorigin', 'anonymous');
+            s.setAttribute('async', '');
+            document.querySelector('div.comments').innerHTML = '';
+            document.querySelector('div.comments').appendChild(s);
+        }
     </script>
 </div>
 {{- /* Comments area end */ -}}
