chore: Add naver seo config

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,3 +1,9 @@
 {{- /* Head custom content area start */ -}}
+<!-- apple webapp config-->
 <meta name="apple-mobile-web-app-capable" content="yes">
+<!-- naver seo config-->
+<meta name="NaverBot" content="All"/>
+<meta name="NaverBot" content="index, follow"/>
+<meta name="Yeti" content="All"/>
+<meta name="Yeti" content="index, follow"/>
 {{- /* Head custom content area end */ -}}
