--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -6,4 +6,5 @@
 <meta name="NaverBot" content="index, follow"/>
 <meta name="Yeti" content="All"/>
 <meta name="Yeti" content="index, follow"/>
+{{ partial "mermaid.html" . }}
 {{- /* Head custom content area end */ -}}
