--- a/layouts/_default/_markup/render-codeblock-mermaid.html
+++ b/layouts/_default/_markup/render-codeblock-mermaid.html
@@ -1,10 +1,11 @@
+<div class="mermaid">
+    {{- .Inner | safeHTML }}
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 <script>
     const config = {
-        theme: 'dark',
-    };
+        startOnLoad: true,
+    }
     mermaid.initialize(config);
-    window.onload = function() {
-        mermaid.init(undefined, ".language-mermaid");
-    };
 </script>
