chore(mermaid): Set neutral theme

--- a/layouts/_default/_markup/render-codeblock-mermaid.html
+++ b/layouts/_default/_markup/render-codeblock-mermaid.html
@@ -6,6 +6,7 @@
 <script>
     const config = {
         startOnLoad: true,
+        theme: 'neutral',
     }
     mermaid.initialize(config);
 </script>
